<resources>
    <string name="app_name">coolStoryGame</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_questions">Вопросы</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_room">Комната</string>
    <string name="title_waiting">Ожидание игроков</string>
    <string name="title_game">Game</string>
    <string name="title_status">Status</string>
    <string name="title_notifications">Notifications</string>
</resources>