<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_registration">

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.coolstorygame.ui.registration.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" >

        <action
            android:id="@+id/action_navigation_registration_to_navigation_waiting"
            app:destination="@id/navigation_waiting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_waiting"
        android:name="com.example.coolstorygame.ui.waiting.WaitingFragment"
        android:label="@string/title_waiting"
        tools:layout="@layout/fragment_waiting" >
        <action
            android:id="@+id/action_navigation_waiting_to_navigation_questions"
            app:destination="@id/navigation_questions" />
    </fragment>

    <fragment
        android:id="@+id/navigation_questions"
        android:name="com.example.coolstorygame.ui.questions.QuestionsFragment"
        android:label="@string/title_questions"
        tools:layout="@layout/fragment_questions" />
</navigation>